[package]
name = "vm-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playnet = { path = "./playnet" }
solana-sdk = "=1.14.6"
solana-program-runtime = "=1.14.6"
solana-runtime = "=1.14.6"
solana-program = "=1.14.6"

serde = { version = "1.0.138", features = ["rc"] }
serde_derive = "1.0.103"
bincode = "1.3.3"