[package]
name = "playnet"
version = "0.1.0"
description = "A minimal runtime to execute Solana programs"
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["playnet", "solana", "playground", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "*"
bincode = "*"
console_error_panic_hook = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
solana-bpf-loader-program = "=1.14.6"
solana-program-runtime = "=1.14.6"
solana_rbpf = "=0.2.31"
solana-sdk = "=1.14.6"
wasm-bindgen = { version = "=0.2.83" }